--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1242,3 +1242,72 @@ a {
 .cid-u7K71DMTMJ P {
   color: #9c98cf;
 }
+.cid-ucMWIExfmZ {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  background-color: #232323;
+}
+.cid-ucMWIExfmZ .row-links {
+  width: 100%;
+  justify-content: center;
+}
+.cid-ucMWIExfmZ .social-row {
+  width: 100%;
+  justify-content: center;
+}
+.cid-ucMWIExfmZ .row {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.cid-ucMWIExfmZ .row .foot-menu {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 0;
+}
+.cid-ucMWIExfmZ .row .foot-menu li {
+  padding: 0 1rem 1rem 1rem;
+}
+.cid-ucMWIExfmZ .row .foot-menu li p {
+  margin: 0;
+}
+.cid-ucMWIExfmZ .row .social-list {
+  width: auto;
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+}
+.cid-ucMWIExfmZ .row .social-list .mbr-iconfont-social {
+  font-size: 1.5rem;
+  color: #ffffff;
+}
+.cid-ucMWIExfmZ .row .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-ucMWIExfmZ .row .social-list a {
+  margin: 0;
+  opacity: .5;
+  transition: .2s linear;
+}
+.cid-ucMWIExfmZ .row .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-ucMWIExfmZ .row .social-list {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+}
+.cid-ucMWIExfmZ .row .row-copirayt {
+  word-break: break-word;
+  width: 100%;
+}
+.cid-ucMWIExfmZ .row .row-copirayt p {
+  width: 100%;
+}
